--- a/index.html
+++ b/index.html
@@ -77,6 +77,9 @@
         </div>
     </section>
 
+    <!-- 隱藏的節日主題設定容器 -->
+    <div id="festival-theme-settings" style="display: none;"></div>
+
     <!-- 精選服飾商品展示 -->
     <section id="products" class="products-showcase">
         <div class="container">
