--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </div>
     </section>
 
-    <!-- 隱藏的節日主題設定容器 -->
-    <div id="festival-theme-settings" style="display: none;"></div>
+    <!-- 節日主題裝飾容器 -->
+    <div id="festival-theme-settings" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; z-index: 5;"></div>
 
     <!-- 精選服飾商品展示 -->
     <section id="products" class="products-showcase">
