feat: 更新網站SEO元資料，新增品牌核心優勢與常見問題區塊，優化響應式設計

--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>莫凡比精品服飾 - 台北女裝推薦 | 專為現代女性打造的時尚天堂</title>
-    <meta name="description" content="莫凡比精品服飾位於台北安和路，提供精品女裝、設計師品牌女裝、造型顧問服務與VIP尊貴服務。台北高級女裝店推薦，專業時尚服飾顾问為現代女性打造完美穿搭。">
-    <meta name="keywords" content="莫凡比精品服飾,台北女裝推薦,精品女裝,高級女裝店,現代女性時尚,台北時尚服飾,設計師品牌女裝,精品服飾店,造型顧問服務,VIP尊貴服務,台北安和路服飾,流行女裝,精品配件,台灣女裝品牌">
-    <meta name="author" content="莫凡比精品服飾">
+    <meta name="description" content="莫凡比精品服飾位於台北安和路，提供精品女裝、設計師品牌女裝、造型顧問服務與VIP尊貴服務。台北高級女裝店推薦，專業時尚服飾顧問為現代女性打造完美穿搭。">
+    <meta name="keywords" content="莫凡比精品服飾,台北女裝推薦,精品女裝,高級女裝店,現代女性時尚,台北時尚服飾,設計師品牌女裝,精品服飾店,造型顧問服務,VIP尊貴服務,台北安和路服飾,流行女裝,精品配件,台灣女裝品牌,MOFANBIC">
+    <meta name="author" content="莫凡比精品服飾 MOFANBIC">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://www.mfb.tw">
     <meta property="og:title" content="莫凡比精品服飾 - 台北女裝推薦 | 專為現代女性打造的時尚天堂">
     <meta property="og:description" content="莫凡比精品服飾位於台北安和路，提供精品女裝、設計師品牌女裝、造型顧問服務與VIP尊貴服務。台北高級女裝店推薦。">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://www.mofanbic.com">
-    <meta property="og:image" content="https://www.mofanbic.com/images/home.jpg">
+    <meta property="og:url" content="https://www.mfb.tw">
+    <meta property="og:image" content="https://www.mfb.tw/images/home.jpg">
+    <meta property="og:site_name" content="莫凡比精品服飾 MOFANBIC">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="莫凡比精品服飾 - 台北女裝推薦">
     <meta name="twitter:description" content="台北精品女裝店推薦，提供設計師品牌女裝與專業造型顧問服務">
@@ -20,6 +22,119 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
+    
+    <!-- 結構化資料 (Schema.org JSON-LD) for GEO優化 -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@graph": [
+        {
+          "@type": "Organization",
+          "name": "莫凡比精品服飾",
+          "alternateName": "MOFANBIC",
+          "url": "https://www.mfb.tw",
+          "logo": "https://www.mfb.tw/images/home.jpg",
+          "description": "專為現代女性打造的時尚天堂，提供精品女裝、設計師品牌女裝、造型顧問服務與VIP尊貴服務",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "安和路二段69巷8號",
+            "addressLocality": "大安區",
+            "addressRegion": "台北市",
+            "postalCode": "106",
+            "addressCountry": "TW"
+          },
+          "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+886-2-2754-3029",
+            "contactType": "customer service",
+            "areaServed": "TW",
+            "availableLanguage": ["zh-TW"]
+          },
+          "sameAs": [
+            "https://www.facebook.com/profile.php?id=100057659101240",
+            "https://lin.ee/HpATuvG"
+          ]
+        },
+        {
+          "@type": "ClothingStore",
+          "name": "莫凡比精品服飾",
+          "image": "https://www.mfb.tw/images/home.jpg",
+          "description": "台北精品女裝店，提供精選國內設計師品牌女裝、專業造型顧問服務",
+          "address": {
+            "@type": "PostalAddress",
+            "streetAddress": "安和路二段69巷8號",
+            "addressLocality": "大安區",
+            "addressRegion": "台北市",
+            "postalCode": "106",
+            "addressCountry": "TW"
+          },
+          "geo": {
+            "@type": "GeoCoordinates",
+            "latitude": "25.030384",
+            "longitude": "121.551985"
+          },
+          "url": "https://www.mfb.tw",
+          "telephone": "+886-2-2754-3029",
+          "priceRange": "$$",
+          "openingHoursSpecification": [
+            {
+              "@type": "OpeningHoursSpecification",
+              "dayOfWeek": ["Tuesday", "Wednesday", "Thursday", "Friday", "Saturday"],
+              "opens": "12:00",
+              "closes": "20:30"
+            }
+          ],
+          "paymentAccepted": "Cash, Credit Card",
+          "servesCuisine": "Fashion"
+        },
+        {
+          "@type": "FAQPage",
+          "mainEntity": [
+            {
+              "@type": "Question",
+              "name": "莫凡比精品服飾提供哪些服務？",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "我們提供精選國內設計師品牌女裝、精緻配件、專業造型顧問與VIP尊貴服務，滿足現代女性多元需求。"
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "店面地址與營業時間？",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "地址：台北市大安區安和路二段69巷8號。營業時間：週二至週六 12:00-20:30，週日與週一公休。"
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "是否提供造型顧問諮詢？",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "有，資深店長可依您的需求提供專業造型建議，歡迎預約。"
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "如何預約VIP尊貴服務？",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "請來電 02-2754-3029 或加入LINE官方帳號預約專屬服務。"
+              }
+            },
+            {
+              "@type": "Question",
+              "name": "有哪些交通方式可到達？",
+              "acceptedAnswer": {
+                "@type": "Answer",
+                "text": "可搭乘捷運至信義安和站，或多條公車路線，周邊亦有多處停車場。"
+              }
+            }
+          ]
+        }
+      ]
+    }
+    </script>
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-NL2L3X9414"></script>
@@ -151,6 +266,38 @@
                 </div>
                 <div class="brand-image">
                     <img src="images/mofanbic_home.jpg" alt="莫凡比精品服飾 - 台北女裝推薦品牌形象">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- 品牌重點摘要 -->
+    <section class="brand-highlights">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-subtitle">WHY CHOOSE US</span>
+                <h2>品牌核心優勢</h2>
+            </div>
+            <div class="highlights-grid">
+                <div class="highlight-item">
+                    <div class="highlight-icon">👗</div>
+                    <h4>精選台灣設計師品牌</h4>
+                    <p>專為現代女性打造，結合時尚與實用的精品女裝，展現獨特個人風格</p>
+                </div>
+                <div class="highlight-item">
+                    <div class="highlight-icon">✨</div>
+                    <h4>專業造型顧問團隊</h4>
+                    <p>資深店長提供量身打造的穿搭建議，根據身型、膚色、場合需求打造完美造型</p>
+                </div>
+                <div class="highlight-item">
+                    <div class="highlight-icon">💎</div>
+                    <h4>VIP尊貴服務體驗</h4>
+                    <p>專屬會員優惠、新品預覽、生日特惠與私人購物時光等尊榮服務</p>
+                </div>
+                <div class="highlight-item">
+                    <div class="highlight-icon">📍</div>
+                    <h4>便利交通位置</h4>
+                    <p>鄰近信義安和站，步行4分鐘可達，周邊多條公車路線及停車場</p>
                 </div>
             </div>
         </div>
@@ -337,6 +484,39 @@
                     referrerpolicy="no-referrer-when-downgrade"
                     title="莫凡比精品服飾位置地圖">
                 </iframe>
+            </div>
+        </div>
+    </section>
+
+    <!-- 常見問題 FAQ -->
+    <section id="faq" class="faq">
+        <div class="container">
+            <div class="section-header">
+                <span class="section-subtitle">FAQ</span>
+                <h2>常見問題</h2>
+                <p>快速解答您的疑問，讓您更了解莫凡比精品服飾</p>
+            </div>
+            <div class="faq-list">
+                <div class="faq-item">
+                    <h3>莫凡比精品服飾提供哪些服務？</h3>
+                    <p>我們提供精選國內設計師品牌女裝、精緻配件、專業造型顧問與VIP尊貴服務，滿足現代女性多元需求。</p>
+                </div>
+                <div class="faq-item">
+                    <h3>店面地址與營業時間？</h3>
+                    <p>地址：台北市大安區安和路二段69巷8號。營業時間：週二至週六 12:00-20:30，週日與週一公休。</p>
+                </div>
+                <div class="faq-item">
+                    <h3>是否提供造型顧問諮詢？</h3>
+                    <p>有，資深店長可依您的需求提供專業造型建議，歡迎預約。</p>
+                </div>
+                <div class="faq-item">
+                    <h3>如何預約VIP尊貴服務？</h3>
+                    <p>請來電 02-2754-3029 或加入LINE官方帳號預約專屬服務。</p>
+                </div>
+                <div class="faq-item">
+                    <h3>有哪些交通方式可到達？</h3>
+                    <p>可搭乘捷運至信義安和站，或多條公車路線，周邊亦有多處停車場。</p>
+                </div>
             </div>
         </div>
     </section>
