feat(ui): add favicon link to index.html and favicon file
Add favicon.ico and update index.html to include favicon link
for improved branding and browser tab visibility.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <!-- 結構化資料 (Schema.org JSON-LD) for GEO優化 -->
     <script type="application/ld+json">
     {
